# Aceso

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exp/: README.md  draw_10.py  draw_11.py  draw_12.py  draw_13.py  draw_14.py  draw_15.py  draw_16.py  draw_17.py  draw_18.py  draw_19.py  draw_1a.py  draw_1b.py  draw_20.py  draw_8.py  draw_9.py  fig_10.py  fig_10.sh  fig_11.py  fig_11.sh  fig_12.py  fig_12.sh  fig_13.py  fig_13.sh  fig_14.sh  fig_14_1.py  fig_14_2.py  fig_15.py  fig_15.sh  fig_16.py  fig_16.sh  fig_17.py  fig_17.sh  fig_18.py  fig_18.sh  fig_19.py  fig_19.sh  fig_1a.py  fig_1a.sh  fig_1b.py  (+13 more)
exp/figures/: README.md
exp/params/: common.json  fig_10.json  fig_11.json  fig_12.json  fig_14_1.json  fig_15.json  fig_16.json  fig_19.json  fig_1a.json  fig_1b.json  fig_20_2.json  fig_8.json  fig_9.json  tab_2.json
exp/params/backup-files/: fig_10.json.bk  fig_17.json.bk  fig_9.json.bk
exp/results/: README.md
exp/utils/: cmd_manager.py  lat_parser.py  log_parser.py
major-test/: CMakeLists.txt  client_consume.cc  client_degraded_search.cc  client_gc_update.cc  client_perf.cc  config.json  server.cc  server_recover.cc
minor-test/: CMakeLists.txt  README.md  dmec_test_memcpy.cc
setup/: cloudlab.profile  download-twitter-workload.sh  download-ycsb-full-workload.sh  download-ycsb-workload.sh  setup-env.sh  setup-ipoib.sh  setup-pylibs.sh  setup-sda4.sh  split-twitter-workload.py  split-ycsb-workload.py
src/: AddrCache.cc  AddrCache.h  CMakeLists.txt  Client.cc  Client.h  Common.h  Hashtable.cc  Hashtable.h  KvUtils.cc  KvUtils.h  NetworkManager.cc  NetworkManager.h  Rdma.cc  Rdma.h  Server.cc  Server.h  run_memcached.sh
trace-make/: prepare-workloads.sh  ycsb-gen.py
trace-make/workload-spec/: workloadb  workloadc  workloadd  workloadupd10  workloadupd100  workloadupd20  workloadupd30  workloadupd40  workloadupd50  workloadupd60  workloadupd70  workloadupd80  workloadupd90
ycsb-test/: server_cpu_monitor.py  server_cpu_monitor.sh
